--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
     margin: 0 0;
     padding: 0 0;
-    color: #232323;
+    color: #201F2E;
+    font-size: 26px;
 }
 
 main {
@@ -38,11 +39,12 @@ main {
 
 .color-card {
     text-align: center;
-    min-width: 100px;
+    min-width: 160px;
     flex:1;
     border-radius: 2%;
     margin: 5px;
-    max-width: 200px;
+    max-width: 250px;
+    font-size: 36px;
 }
 
 /* Fonts styling */
@@ -50,15 +52,19 @@ main {
 #fonts-card-container,
 #font-size-container {
     flex-direction: column;
+    align-items: center;
 }
 
 .font-card,
 .font-size-card {
-    min-width: 100px;
-    flex:1;
+    min-width: 470px;
+    max-width: 720px;
+    flex:3;
     border: #201F2E 1px solid;
     border-radius: 2%;
     margin: 10px;
+    text-align: center;
+    padding: 10px 25px;
 }
 
 /* Text Styles stying */
@@ -78,25 +84,28 @@ h3 {
     text-align: center;
 }
 
-p {
-    font-size: 32px;
-
-}
-
-/* The divs will scale with the size of the page but the list items will not */
-
 @media screen and (max-width: 960px) {
+    .font-card,
+    .font-size-card {
+        min-width: 370px;
+        max-width: 370px;
+    }
+
+    
     h1 {
       font-size: 50px;
     }
     h2 {
         font-size: 35px;
     }
-    h3 {
+    h3, 
+    a,
+    div,
+    .color-card {
         font-size: 28px;
     }
     p {
-        font-size: 24px;
+        font-size: 22px;
     }
     .font-style-list {
         font-size: 24px;
@@ -104,6 +113,13 @@ p {
   }
   
   @media screen and (max-width: 768px) {
+    
+    .font-card,
+    .font-size-card {
+    min-width: 250px;
+    max-width: 300px;
+    }
+
     h1 {
       font-size: 40px;
     }
@@ -111,11 +127,14 @@ p {
     h2 {
       font-size: 24px;
     }
-    h3 {
+    h3,
+    a,
+    div,
+    .color-card {
         font-size: 22px;
     }
     p {
-        font-size: 20px;
+        font-size: 14px;
     }
     .font-style-list {
         font-size: 20px;
@@ -128,18 +147,20 @@ p {
       display: flex;
       min-width: 50px;
       justify-content: center;
+      margin-top: 4vh;
   }
 
   .boilerplate-html-button {
     text-decoration: none;
     border: 1px solid #fffe;
-    background-color: #14bdbd;
+    /* background-color: #14bdbd; */
+    background-image: linear-gradient(to right, #14bdbd , #0b925e);
     padding: 10px 20px;
     border-radius: 5px;
   }
 
   .boilerplate-html-button:hover {
     border: 1px solid #232323;
-    background-color: #fffe;
-    transition: all 0.2s ease-out;
+    background-image: linear-gradient(to right, #fffe , #fffe);
+    transition: all 0.2s ease-in-out;
   }
